--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ spring.jpa.show-sql=true
 
 
 # OpenWeather
-weather.api.key=673c8c46a27afd14e4e9b45c6fc9f1d9
+weather.api.key={YOUR API KEY}
 weather.api.url=https://api.openweathermap.org/data/2.5/weather
