--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ spring.jpa.show-sql=true
 
 
 # OpenWeather
-weather.api.key={YOUR API KEY}
+weather.api.key=${WEATHER_API_KEY}
 weather.api.url=https://api.openweathermap.org/data/2.5/weather
