--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 server.port=8060
 spring.application.name=wheather_api
 
+spring.datasource.url=jdbc:postgresql://db.hypflsvnyvipopatmkip.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=${DB_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
 # H2 database console
 spring.h2.console.enabled=true
