--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8060
 spring.application.name=wheather_api
 
-spring.datasource.url=jdbc:postgresql://db.hypflsvnyvipopatmkip.supabase.co:5432/postgres
+spring.datasource.url=jdbc:postgresql://db.hypflsvniypiopatmqkp.supabase.co:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=${DB_PASSWORD}
 
